lgr/main/default/objects/lgr_Log__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <defaultValue>&apos;DEBUG&apos;</defaultValue>
    <label>Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CRITICAL</fullName>
            </value>
            <value>
                <fullName>WARNING</fullName>
            </value>
            <value>
                <fullName>INFO</fullName>
            </value>
            <value>
                <fullName>DEBUG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>