lgr/main/default/objects/lgr_Log__c/fields/StackTrace__c.field-meta.xml
<CustomField>
    <fullName>StackTrace__c</fullName>
    <description>where in the code this log occurred</description>
    <inlineHelpText>where in the code this log occurred (retrieved from exception.getStackTraceString() for exceptions)</inlineHelpText>
    <label>Stack Trace</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>